# finance-exercices

./: README.md  main.py  pyproject.toml
src/finance_exercices/: __init__.py  afps.py  comparison.py  fi.py
